--- a/template/style-guide.html
+++ b/template/style-guide.html
@@ -7,9 +7,9 @@
   <meta content="summary_large_image" name="twitter:card">
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <meta content="frankdev0428" name="generator">
-  <link href="css/normalize.css" rel="stylesheet" type="text/css">
-  <link href="css/webflow.css" rel="stylesheet" type="text/css">
-  <link href="css/francos-porfolio.webflow.css" rel="stylesheet" type="text/css">
+  <link href="/Front-end-Porfolio/css/normalize.css" rel="stylesheet" type="text/css">
+  <link href="/Front-end-Porfolio/css/webflow.css" rel="stylesheet" type="text/css">
+  <link href="/Front-end-Porfolio/css/francos-porfolio.webflow.css" rel="stylesheet" type="text/css">
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
   <script type="text/javascript">WebFont.load({  google: {    families: ["Bai Jamjuree:regular,500,600,700"]  }});</script>
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
